@@ -18,8 +18,8 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 파티 모집공고 관련 비즈니스 로직을 담당하는 서비스
@@ -61,12 +61,10 @@ public class PartyRecruitmentService {
                 .toList();
 
 
-        // 6. DTO 변환
         List<PartyRecruitmentsResponseDto.PartyRecruitmentDto> recruitmentDtos = filtered.stream()
-                .map(this::toPartyRecruitmentDto)
-                .collect(Collectors.toList());
+                .map(PartyRecruitmentsResponseDto.PartyRecruitmentDto::from)
+                .toList();
 
-        // 7. ResponseDto 생성
         return PartyRecruitmentsResponseDto.builder()
                 .total(filtered.size())
                 .partyRecruitments(recruitmentDtos)
@@ -74,97 +72,50 @@ public class PartyRecruitmentService {
     }
 
     /**
-     * PartyRecruitment 엔티티를 DTO로 변환
-     */
-    private PartyRecruitmentsResponseDto.PartyRecruitmentDto toPartyRecruitmentDto(PartyRecruitment recruitment) {
-        Party party = recruitment.getParty();
-
-        // PartyDto 생성
-        PartyRecruitmentsResponseDto.PartyRecruitmentDto.PartyDto.PartyTypeDto partyTypeDto =
-                PartyRecruitmentsResponseDto.PartyRecruitmentDto.PartyDto.PartyTypeDto.builder()
-                        .type(party.getPartyType().getType())
-                        .build();
-
-        PartyRecruitmentsResponseDto.PartyRecruitmentDto.PartyDto partyDto =
-                PartyRecruitmentsResponseDto.PartyRecruitmentDto.PartyDto.builder()
-                        .id(party.getId())
-                        .title(party.getTitle())
-                        .image(party.getImage())
-                        .status(party.getStatus().name())
-                        .partyType(partyTypeDto)
-                        .build();
-
-        // PositionDto 생성
-        // TODO: PartyRecruitment에 Position 관계가 있다면 추가
-        PartyRecruitmentsResponseDto.PartyRecruitmentDto.PositionDto positionDto = null;
-
-        // PartyRecruitmentDto 생성
-        return PartyRecruitmentsResponseDto.PartyRecruitmentDto.builder()
-                .id(recruitment.getId())
-                .content(recruitment.getContent())
-                .recruitingCount(recruitment.getMaxParticipants())
-                .recruitedCount(recruitment.getCurrentParticipants())
-                .status(recruitment.getIsCompleted() ? "COMPLETED" : "RECRUITING")
-                .createdAt(recruitment.getCreatedAt() != null 
-                        ? recruitment.getCreatedAt().toString() 
-                        : null)
-                .party(partyDto)
-                .position(positionDto)
-                .build();
-    }
-
-    /**
-     * 단일 파티 모집글 조회
-     */
-    public PartyRecruitmentResponseDto getPartyRecruitment(Long partyRecruitmentId, Long userId) {
-        // TODO: 구현 예정
-        return null;
-    }
-
-    /**
-     * 파티 모집글 생성
+     * 파티 모집공고 생성
      */
     @Transactional
     public CreatePartyRecruitmentsResponseDto createPartyRecruitment(Long partyId,
                                                                      Long userId,
                                                                      CreatePartyRecruitmentRequestDto request) {
-        // 1. 파티 존재 확인
+        
         Party party = partyRepository.findById(partyId)
                 .orElseThrow(() -> new PartyNotFoundException(partyId));
 
-        // 2. 권한 체크 (관리자 권한 필요 - MASTER 또는 DEPUTY)
         partyAccessService.checkManagerOrThrow(partyId, userId);
 
-        // 3. Position 존재 확인 (검증용 - 현재 PartyRecruitment 엔티티에 Position 관계는 없지만, 요청 데이터 검증)
         positionRepository.findById(request.getPositionId())
                 .orElseThrow(() -> new PositionNotFoundException(request.getPositionId()));
 
-        // 4. PartyRecruitment 엔티티 생성
-        // title은 Party의 title을 사용하거나, content의 일부를 사용
-        // 일단 Party의 title을 사용
         PartyRecruitment recruitment = PartyRecruitment.builder()
                 .party(party)
-                .title(party.getTitle()) // Party의 title 사용
+                .title(party.getTitle())
                 .content(request.getContent())
                 .maxParticipants(request.getRecruitingCount())
                 .currentParticipants(0) // 초기값 0
-                .isCompleted(false) // 초기값 false
+                .completed(false) // 초기값 false
                 .build();
 
-        // 5. 저장
         PartyRecruitment saved = partyRecruitmentRepository.save(recruitment);
 
-        // 6. DTO 변환하여 반환
         return CreatePartyRecruitmentsResponseDto.builder()
                 .id(saved.getId())
                 .content(saved.getContent())
                 .recruitingCount(saved.getMaxParticipants())
                 .recruitedCount(saved.getCurrentParticipants())
-                .status(saved.getIsCompleted() ? "COMPLETED" : "RECRUITING")
-                .createdAt(saved.getCreatedAt() != null 
-                        ? saved.getCreatedAt().toString() 
-                        : null)
+                .status(saved.isCompleted() ? "COMPLETED" : "RECRUITING")
+                .createdAt(saved.getCreatedAt())
                 .build();
+    }
+
+    /**
+     * 파티 모집공고 단일 조회
+     */
+    public PartyRecruitmentResponseDto getPartyRecruitment(Long partyRecruitmentId, Long userId) {
+        PartyRecruitment recruitment = partyRecruitmentRepository.findById(partyRecruitmentId)
+                .orElseThrow(() -> new EntityNotFoundException("파티 모집공고가 없습니다."));
+
+        return PartyRecruitmentResponseDto.from(recruitment);
     }
 }
 
